= Changelog

== `0.2.0.0`

* Update all dependencies.
* API
  ** Add owner information to the response of the `/space/view` route.

== `0.1.0.0`

* API
  ** Add `/space/leave` route.
  ** Add optional `password` to request body route of `/space/create`.
  ** Add `owner` field to spaces when serialized to/from JSON affecting a few routes.
    *** `/space/list`
    *** `/reservation/list`
* Frontend
  ** Add a new button leave a space when you already are a member.
  ** Allow optionally setting a password to join a space.
* Database
  ** Add new column `password_hash` to the `space` table.
  ** Add new column `owner` to the `space` table.
    *** This migration has to touch a lot of data.
        Spaces that don't have any members will be purged during this migration.
        All other spaces will have their oldest member as the new owner.

== `0.0.3.0`

* API
  ** Add `/reservation/list` route.
  ** Add `timezone` field to spaces when serialized to/from JSON affecting a few routes.
    *** `/space/list`
    *** `/reservation/list`
* Frontend
  ** Add a new page to view existing reservations.
  ** Add a primitive indicator to visualize reserved time periods.

== `0.0.2.3`

* Set a dark gray theme color.

== `0.0.2.2`

* Set a yellowish theme color and dark color scheme.

== `0.0.2.1`

* Set a `black` theme color for most browsers and mobile.

== `0.0.2.0`

* API
  ** Updated `/space/view` route.
    *** Replace `permissions` with `your-role`.
    *** Properly handle insufficient permission.
* Frontend
  ** "Join Space" button is now hidden after joining.
  ** Add mobile-web-app capability flag.
     After adding the website to your phone's home screen the URL bar should now be hidden.

== `0.0.1.0`

* API
  ** Add user `id` to `/login` response.
  ** Improve `/profile` route.
* Frontend
  ** Add user `id` to localStorage.
  ** Add drop-down wrapper for "Sign out" including additional information.

== `0.0.0.0`

* Initial release.